Fixed spacing below breadcrumbs on missile pages

--- a/wp-content/themes/amti/sass/pages/_missile.scss
+++ b/wp-content/themes/amti/sass/pages/_missile.scss
@@ -81,29 +81,36 @@
 	}
 }
 
-ul.breadcrumbs {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    font-size: 0.9em;
-    margin-bottom:20px;
+.single-missile {
 
-	li {
-	    float: left;
-
-	    &:after {    
-			content: '»';
-			margin:0 5px;
-		}
-
-		a {
-		    padding: 14px 0px 14px 0;
-		    text-decoration: none;
-		}
+	header {
+		margin-bottom:30px;
 	}
-	li:last-child {
-		&:after {
-			content: '';
+
+	ul.breadcrumbs {
+	    list-style-type: none;
+	    margin: 0;
+	    padding: 0;
+	    font-size: 0.9em;
+	    margin-bottom:20px;
+
+		li {
+		    float: left;
+
+		    &:after {    
+				content: '»';
+				margin:0 5px;
+			}
+
+			a {
+			    padding: 14px 0px 14px 0;
+			    text-decoration: none;
+			}
+		}
+		li:last-child {
+			&:after {
+				content: '';
+			}
 		}
 	}
 }
